src/app/core/components/skill-activity-tabs/skill-activity-tabs.component.scss
@import 'src/colors.scss';
$bk-secondary: #3B73B4;
$border-radius: .5rem;

:host {
  display: block;
}


:host ::ng-deep .group-skills {
  .ui-tabview {
    padding: 0;
    background-color: $base-bk-color;
    border-radius: 0;

    &.ui-tabview-top .ui-tabview-nav li:focus {
      box-shadow: none;
    }

    ul.ui-tabview-nav {
      display: flex;
      height: 5rem;

      > li {
        flex: 1;
        border: none;
        outline: none;
        margin: 0;
        top: 0;
        background-color: $bk-secondary;
        border-radius: 0;
        // color: white !important;

        &:first-child {
          border-top-left-radius: $border-radius;
          a {
            border-top-left-radius: $border-radius;
          }
        }

        &:last-child {
          border-top-right-radius: $border-radius;
          a {
            border-top-right-radius: $border-radius;
          }
        }

        a {
          width: 100%;
          height: 100%;
          display: flex;
          align-items: center;
          position: relative;
          font-size: 1.2rem;

          span.ui-tabview-left-icon {
            position: absolute;
          }

          span.ui-tabview-title {
            margin: 0 auto;
          }
        }

        &:hover {
          border: none !important;
        }

        &.ui-state-default {

          &:not(:first-child) {
            // border-bottom-left-radius: 1rem;
          }

          &:first-child {
            // border-bottom-right-radius: 1rem;
          }

          a {
            color: white;
          }

          &:hover {
            background-color: #578CCA !important;
            a {
              color: white !important;
            }
          }
        }

        &.ui-state-active {
          background-color: $base-color;

          &:before {
            content:" ";
            display: block;
            background-image: url('/assets/images/corner.svg');
            background-repeat: no-repeat;
            background-position: right;
            background-size: cover;
            width: 1rem;
            height: 1rem;
            position: absolute;
            bottom:0;
            right:-1rem;
            z-index: 1;
          }

          &:last-child:before {
            right:auto;
            left:-1rem;
            background-position: left;
          }

          .indicator {
            position: absolute;
            left: calc(50% - 0.3333rem);
            top: 0;
            width: 0;
            height: 0;
            border-left: 0.6667rem solid transparent;
            border-right: 0.6667rem solid transparent;
            border-top: 0.4167rem solid $base-bk-color;
          }

          &:hover {
            background-color: #779CCA !important;
          }
        }
      }
    }

    .ui-tabview-panels {
      padding: 0;
      border: none;
      font-family: "titillium";
    }
  }
}

